Update reality.txt, vmess_tvc.txt, vmess.txt and related files

--- a/reality_clash.yaml
+++ b/reality_clash.yaml
@@ -19,8 +19,6 @@ proxies:
   - {"name":"🇫🇮FI | 🟢 | vless | @Outline_Vpn | 13","type":"vless","server":"212.87.222.42","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🟢 | vless | @Outline_Vpn | 14","type":"vless","server":"87.120.165.214","port":443,"udp":false,"uuid":"9bc48566-76f9-44d7-8ad0-af41336b4004","tls":false,"servername":"google.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"7tgf5o3AfrE-TWqB3CpBuuZyt7S9tJq6TZ26gPWNyzY","short-id":"3549df188940fe","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇷🇺RU | 🟢 | vless | @Outline_Vpn | 18","type":"vless","server":"ru.maviks.eu","port":443,"udp":false,"uuid":"0a947205-01a0-4634-8e78-daf200d02def","tls":false,"servername":"maviks.eu","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"cGzNRbN_zruI3CVTDukB2nOqWWEj7kgkay24f2fdLmQ","short-id":"0f917152a871e9c0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇩🇪DE | 🟢 | vless | @prrofile_purple | 102","type":"vless","server":"graygoat.fonixapp.org","port":45846,"udp":false,"uuid":"534c8834-d096-462c-8c16-37571a798ef3","tls":false,"servername":"stackoverflow.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"17q39_glGtdUgFWkKwjxnBG0PxYkJbgt9bfkotaj7yg","short-id":"ac","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇩🇪DE | 🟢 | vless | @prrofile_purple | 103","type":"vless","server":"91.107.128.99","port":443,"udp":false,"uuid":"4577c520-59c0-4edf-99f9-a131758aecad","tls":false,"servername":"tgju.org","network":"tcp","reality-opts":{"public-key":"lG2emtmtOMj1MRRYNQnHfH7p5IHkOyGWXvaCe0kwS0Q","short-id":"598b09fa644710f5","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🟢 | vless | @prrofile_purple | 111","type":"vless","server":"ab.iranlit.ir","port":1611,"udp":false,"uuid":"202ac83e-9012-4283-8acb-9af2c2a2dfeb","tls":false,"servername":"zhaket.com","network":"tcp","reality-opts":{"public-key":"3EWvgfHUv-7aKL47dJL1WiIHY43aeWo8QUZRjzCw0RI","short-id":"6f84e8adb893b4bd","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🟢 | vless | @prrofile_purple | 112","type":"vless","server":"109.61.16.89","port":30938,"udp":false,"uuid":"1068814a-6d43-40d9-a127-0f6b6b77ccfc","tls":false,"servername":"indeed.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"OkwhFGkP6NhXbmfBpBKqJ_HDNEcqbkp0mMc9HeYVBBE","short-id":"9f2b1f07","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇫🇮FI | 🔴 | vless | @prrofile_purple | 120","type":"vless","server":"46.62.168.70","port":23737,"udp":false,"uuid":"debf2a42-1ff4-4ea6-92a4-f6ac49595cc7","tls":false,"servername":"varzesh3.com","network":"grpc","reality-opts":{"public-key":"i5nssGunCVG0W2CI3OM-wGXJwCn9W5Xvm0-tQw_SgEQ","short-id":"7c0b6c88fe5c","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
@@ -28,6 +26,9 @@ proxies:
   - {"name":"🇫🇮FI | 🟢 | vless | @prrofile_purple | 128","type":"vless","server":"direct.yasharteam.com","port":443,"udp":false,"uuid":"59db3b45-830a-4b6c-8b7d-9bd6d7189c7d","tls":false,"servername":"tgju.org","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"tw6uAbjXzRSIKChb6pDbHVNjnU9Don4hbv6dHRkmJx8","short-id":"e54b5ad736ae4c38","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇩🇪DE | 🔴 | vless | @prrofile_purple | 133","type":"vless","server":"91.107.243.238","port":2025,"udp":false,"uuid":"3f042483-c71c-40cc-a4b7-d79f80db4253","tls":false,"servername":"www.cloudflare.com","network":"grpc","grpc-opts":{"grpc-service-name":"Telegram : @PouRia_Cheat"},"reality-opts":{"public-key":"AUNIYov4R2TvNmC0cF0NiKWYGqzikosOu4g2wcCALlw","short-id":"8d9c20be72b4","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"❔XX | 🔴 | vless | @prrofile_purple | 135","type":"vless","server":"rep.tr.xpnvip.ir","port":2689,"udp":false,"uuid":"fa695024-dff5-47c0-8976-64b963236c22","tls":false,"servername":"tgju.org","network":"grpc","grpc-opts":{"grpc-service-name":"nama"},"reality-opts":{"public-key":"L4WAAdlTv7i2tDZwPcvYrCfZg2IDCI_sp5LElu3u91U","short-id":"b6c24852f86067a6","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
+  - {"name":"🇫🇮FI | 🟢 | vless | @prrofile_purple | 143","type":"vless","server":"zZz.ZzZ.zZz.yasharteam.com","port":443,"udp":false,"uuid":"ddaf37b4-a481-4f25-877a-4a34445040db","tls":false,"servername":"tgju.org","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"tw6uAbjXzRSIKChb6pDbHVNjnU9Don4hbv6dHRkmJx8","short-id":"e54b5ad736ae4c38","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
+  - {"name":"🇬🇧GB | 🟢 | vless | @prrofile_purple | 146","type":"vless","server":"gb01-vlr01.tcp-reset-club.net","port":443,"udp":false,"uuid":"ea58dac7-6ca9-448a-aeff-af1ac5070acf","tls":false,"servername":"hls-svod.itunes.apple.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"mLmBhbVFfNuo2eUgBh6r9-5Koz9mUCn3aSzlR6IejUg","short-id":"31","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇮🇷IR | 🔴 | vless | @prrofile_purple | 147","type":"vless","server":"a1-l.1.in.neternal.cyou","port":8880,"udp":false,"uuid":"3274e164-e073-47a5-9e53-57cb91419e8d","tls":false,"servername":"snapp.ir","network":"xhttp","reality-opts":{"public-key":"ti71CP0_MyJ4PBWzEQihw9UfHzTs0mbsP-DpGJRPRXQ","short-id":"a990759f0f","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🔴 | vless | @ShadowProxy66 | 1","type":"vless","server":"87.120.205.207","port":2025,"udp":false,"uuid":"ebac2049-8367-4eab-a1a5-8b742b2fd3b6","tls":false,"servername":"yahoo.com","network":"grpc","grpc-opts":{"grpc-service-name":"das12327gsgsyu"},"reality-opts":{"public-key":"Cnuh4bNEBvRIjrYBEWSVhX8nr5j46lHuyen_IU2rbSk","short-id":"a76e2f1d45","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🟢 | vless | @v2ray1_ng | 0","type":"vless","server":"51.38.98.69","port":443,"udp":false,"uuid":"6b690c69-7301-44c4-81e8-9d5d7e8263a6","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"-3sZE2OPDhkNtxufF2YqPmoa5hqVna5zalfJfrUiMm0","short-id":"ecd6615548c2bddb","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 4","type":"vless","server":"2.58.95.16","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
@@ -64,8 +65,6 @@ proxy-groups:
       - '🇫🇮FI | 🟢 | vless | @Outline_Vpn | 13'
       - '🇩🇪DE | 🟢 | vless | @Outline_Vpn | 14'
       - '🇷🇺RU | 🟢 | vless | @Outline_Vpn | 18'
-      - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 102'
-      - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 103'
       - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 111'
       - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 112'
       - '🇫🇮FI | 🔴 | vless | @prrofile_purple | 120'
@@ -73,6 +72,9 @@ proxy-groups:
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 128'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 133'
       - '❔XX | 🔴 | vless | @prrofile_purple | 135'
+      - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 143'
+      - '🇬🇧GB | 🟢 | vless | @prrofile_purple | 146'
+      - '🇮🇷IR | 🔴 | vless | @prrofile_purple | 147'
       - '🇩🇪DE | 🔴 | vless | @ShadowProxy66 | 1'
       - '🇩🇪DE | 🟢 | vless | @v2ray1_ng | 0'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 4'
@@ -109,8 +111,6 @@ proxy-groups:
       - '🇫🇮FI | 🟢 | vless | @Outline_Vpn | 13'
       - '🇩🇪DE | 🟢 | vless | @Outline_Vpn | 14'
       - '🇷🇺RU | 🟢 | vless | @Outline_Vpn | 18'
-      - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 102'
-      - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 103'
       - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 111'
       - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 112'
       - '🇫🇮FI | 🔴 | vless | @prrofile_purple | 120'
@@ -118,6 +118,9 @@ proxy-groups:
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 128'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 133'
       - '❔XX | 🔴 | vless | @prrofile_purple | 135'
+      - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 143'
+      - '🇬🇧GB | 🟢 | vless | @prrofile_purple | 146'
+      - '🇮🇷IR | 🔴 | vless | @prrofile_purple | 147'
       - '🇩🇪DE | 🔴 | vless | @ShadowProxy66 | 1'
       - '🇩🇪DE | 🟢 | vless | @v2ray1_ng | 0'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 4'
@@ -153,8 +156,6 @@ proxy-groups:
       - '🇫🇮FI | 🟢 | vless | @Outline_Vpn | 13'
       - '🇩🇪DE | 🟢 | vless | @Outline_Vpn | 14'
       - '🇷🇺RU | 🟢 | vless | @Outline_Vpn | 18'
-      - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 102'
-      - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 103'
       - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 111'
       - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 112'
       - '🇫🇮FI | 🔴 | vless | @prrofile_purple | 120'
@@ -162,6 +163,9 @@ proxy-groups:
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 128'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 133'
       - '❔XX | 🔴 | vless | @prrofile_purple | 135'
+      - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 143'
+      - '🇬🇧GB | 🟢 | vless | @prrofile_purple | 146'
+      - '🇮🇷IR | 🔴 | vless | @prrofile_purple | 147'
       - '🇩🇪DE | 🔴 | vless | @ShadowProxy66 | 1'
       - '🇩🇪DE | 🟢 | vless | @v2ray1_ng | 0'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 4'
