--- a/vmess_tvc_clash.yaml
+++ b/vmess_tvc_clash.yaml
@@ -19,8 +19,7 @@ proxies:
   - {"name":"🇨🇳CN | 🟢 | vmess | @mftizi | 15","type":"vmess","server":"183.236.48.163","port":58831,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
   - {"name":"🇨🇳CN | 🟢 | vmess | @mftizi | 16","type":"vmess","server":"120.232.153.27","port":58831,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
   - {"name":"❔XX | 🟢 | vmess | @prrofile_purple | 146","type":"vmess","server":"france1.okreza151m.ir","port":5156,"cipher":"auto","uuid":"259daf00-ad91-4b63-aef7-6911af21052a","alterId":0,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
-  - {"name":"🇮🇷IR | 🟢 | vmess | @ConfigsHUB | 3","type":"vmess","server":"dl.gozar-azad.com","port":8880,"cipher":"auto","uuid":"70bddc33-4917-41a9-b1cc-1ac41ec446af","alterId":0,"tls":true,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
-  - {"name":"🇫🇮FI | 🟢 | vmess | @ConfigsHUB | 10","type":"vmess","server":"65.109.179.81","port":59119,"cipher":"auto","uuid":"944a9973-231b-496d-bb15-4c764e803724","alterId":0,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
+  - {"name":"🇺🇸US | 🟢 | vmess | @ConfigsHUB | 1","type":"vmess","server":"192.166.82.42","port":36010,"cipher":"auto","uuid":"dc36afe6-31fe-4c64-8d50-4528622665b8","alterId":0,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
   - {"name":"🇫🇮FI | 🟢 | vmess | @proxystore11 | 5","type":"vmess","server":"65.109.190.91.suupermeat.ir","port":2053,"cipher":"auto","uuid":"b4493eed-d316-45d5-addf-9857ffeba30e","alterId":0,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
   - {"name":"🇹🇼TW | 🟢 | vmess | @yaney_01 | 1","type":"vmess","server":"45.199.138.217","port":41000,"cipher":"auto","uuid":"f9fa3a9c-f7d5-414f-88e6-6970585d9949","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/282018252526","headers":{"host":""}},"client-fingerprint":"chrome"}
   - {"name":"🇺🇸US | 🟢 | vmess | @yaney_01 | 2","type":"vmess","server":"107.149.119.43","port":37000,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/040318142507","headers":{"host":""}},"client-fingerprint":"chrome"}
@@ -35,7 +34,7 @@ proxies:
   - {"name":"🚩CF | 🟢 | vmess | @Hope_Net | 11","type":"vmess","server":"190.93.246.120","port":2082,"cipher":"auto","uuid":"5f3f09ad-89cb-4e94-a7ad-aa8239913555","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/github.com/Alvin9999","headers":{"host":"ip18.6929198.xyz"}},"client-fingerprint":"chrome"}
   - {"name":"🚩CF | 🟢 | vmess | @Hope_Net | 14","type":"vmess","server":"190.93.247.170","port":2082,"cipher":"auto","uuid":"5f3f09ad-89cb-4e94-a7ad-aa8239913555","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/github.com/Alvin9999","headers":{"host":"ip18.6929198.xyz"}},"client-fingerprint":"chrome"}
   - {"name":"🇺🇸US | 🟢 | vmess | @fnet00 | 1","type":"vmess","server":"v2ray.codefyinc.com","port":443,"cipher":"auto","uuid":"2c981164-9b93-4bca-94ff-b78d3f8498d7","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/vmessws","headers":{"host":"v2ray.codefyinc.com"}},"client-fingerprint":"chrome"}
-  - {"name":"🇷🇺RU | 🟢 | vmess | @FreakConfig | 10","type":"vmess","server":"45.67.230.79","port":11052,"cipher":"auto","uuid":"314185f7-931d-4656-922d-0857e7afd224","alterId":0,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
+  - {"name":"🇷🇺RU | 🟢 | vmess | @FreakConfig | 11","type":"vmess","server":"45.67.230.79","port":11052,"cipher":"auto","uuid":"314185f7-931d-4656-922d-0857e7afd224","alterId":0,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
 proxy-groups:
   - name: MANUAL
     type: select
@@ -54,8 +53,7 @@ proxy-groups:
       - '🇨🇳CN | 🟢 | vmess | @mftizi | 15'
       - '🇨🇳CN | 🟢 | vmess | @mftizi | 16'
       - '❔XX | 🟢 | vmess | @prrofile_purple | 146'
-      - '🇮🇷IR | 🟢 | vmess | @ConfigsHUB | 3'
-      - '🇫🇮FI | 🟢 | vmess | @ConfigsHUB | 10'
+      - '🇺🇸US | 🟢 | vmess | @ConfigsHUB | 1'
       - '🇫🇮FI | 🟢 | vmess | @proxystore11 | 5'
       - '🇹🇼TW | 🟢 | vmess | @yaney_01 | 1'
       - '🇺🇸US | 🟢 | vmess | @yaney_01 | 2'
@@ -70,7 +68,7 @@ proxy-groups:
       - '🚩CF | 🟢 | vmess | @Hope_Net | 11'
       - '🚩CF | 🟢 | vmess | @Hope_Net | 14'
       - '🇺🇸US | 🟢 | vmess | @fnet00 | 1'
-      - '🇷🇺RU | 🟢 | vmess | @FreakConfig | 10'
+      - '🇷🇺RU | 🟢 | vmess | @FreakConfig | 11'
   - name: URL-TEST
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -89,8 +87,7 @@ proxy-groups:
       - '🇨🇳CN | 🟢 | vmess | @mftizi | 15'
       - '🇨🇳CN | 🟢 | vmess | @mftizi | 16'
       - '❔XX | 🟢 | vmess | @prrofile_purple | 146'
-      - '🇮🇷IR | 🟢 | vmess | @ConfigsHUB | 3'
-      - '🇫🇮FI | 🟢 | vmess | @ConfigsHUB | 10'
+      - '🇺🇸US | 🟢 | vmess | @ConfigsHUB | 1'
       - '🇫🇮FI | 🟢 | vmess | @proxystore11 | 5'
       - '🇹🇼TW | 🟢 | vmess | @yaney_01 | 1'
       - '🇺🇸US | 🟢 | vmess | @yaney_01 | 2'
@@ -105,7 +102,7 @@ proxy-groups:
       - '🚩CF | 🟢 | vmess | @Hope_Net | 11'
       - '🚩CF | 🟢 | vmess | @Hope_Net | 14'
       - '🇺🇸US | 🟢 | vmess | @fnet00 | 1'
-      - '🇷🇺RU | 🟢 | vmess | @FreakConfig | 10'
+      - '🇷🇺RU | 🟢 | vmess | @FreakConfig | 11'
   - name: FALLBACK
     type: fallback
     url: http://www.gstatic.com/generate_204
@@ -123,8 +120,7 @@ proxy-groups:
       - '🇨🇳CN | 🟢 | vmess | @mftizi | 15'
       - '🇨🇳CN | 🟢 | vmess | @mftizi | 16'
       - '❔XX | 🟢 | vmess | @prrofile_purple | 146'
-      - '🇮🇷IR | 🟢 | vmess | @ConfigsHUB | 3'
-      - '🇫🇮FI | 🟢 | vmess | @ConfigsHUB | 10'
+      - '🇺🇸US | 🟢 | vmess | @ConfigsHUB | 1'
       - '🇫🇮FI | 🟢 | vmess | @proxystore11 | 5'
       - '🇹🇼TW | 🟢 | vmess | @yaney_01 | 1'
       - '🇺🇸US | 🟢 | vmess | @yaney_01 | 2'
@@ -139,7 +135,7 @@ proxy-groups:
       - '🚩CF | 🟢 | vmess | @Hope_Net | 11'
       - '🚩CF | 🟢 | vmess | @Hope_Net | 14'
       - '🇺🇸US | 🟢 | vmess | @fnet00 | 1'
-      - '🇷🇺RU | 🟢 | vmess | @FreakConfig | 10'
+      - '🇷🇺RU | 🟢 | vmess | @FreakConfig | 11'
 rules:
  - GEOIP,IR,DIRECT
  - MATCH,MANUAL
